# interactive-yuma-simulator

./: .cruft.json  .pdm-python  README.md  README_AWS.md  deploy.sh  noxfile.py  pyproject.toml  pyproject.toml.rej  setup-prod.sh
.github/workflows/: ci.yml
app/envs/prod/: Dockerfile  Dockerfile.rej  celery-entrypoint.sh  gunicorn.conf.py
app/src/project/: asgi.py  settings.py  urls.py
app/src/project/core/: forms.py  utils.py  views.py
app/src/project/core/templates/: simulator.html
app/src/project/core/tests/: settings.py
app/src/project/yuma_simulation/: YUMA_SIMULATION.md
app/src/project/yuma_simulation/_internal/: cases.py  charts_data.py  charts_matplotlib.py  charts_plotly.py  charts_utils.py  charts_utils_plotly.py  metagraph_utils.py  simulation_utils.py  yumas.py
app/src/project/yuma_simulation/v1/: api.py
devops/scripts/: vars.sh
devops/tf/core/: backend.tf  terraform.tfvars
devops/tf/main/envs/prod/: backend.tf  terraform.tfvars
devops/tf/main/envs/staging/: backend.tf  terraform.tfvars
devops/tf/main/files/: docker-compose.yml
devops/tf/main/files/nginx/templates/: default.conf.template
devops/vultr_tf/core/: vultr-cloud-init.tftpl
envs/dev/: .env.template  docker-compose.yml
envs/prod/: .env.template  docker-compose.yml
nginx/config_helpers/: timeouts.conf
nginx/templates/: default.conf.template
yuma_simulation/: yuma_simulation-0.1.0-py3-none-any.whl  yuma_simulation-0.1.1-py3-none-any.whl
