[project]
name = "interactive_yuma_simulator"
requires-python = "==3.11.*"
version = "0"
dependencies = [
    "Django>=5.1.4",
    "django-constance[database]>=4.1.3",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-probes>=1.7.0",
    "django-debug-toolbar>=4.4.6",
    "django-structlog[celery]>=9.0.0",
    "celery>=5.4.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.3",
    "redis>=5.2.1",
    "sentry-sdk>=2.19.2",
    "ipython>=8.30.0",
    "nox>=2024.10.9",
    "more-itertools>=10.5.0",
    "psutil>=6.1.0",
    "prometheus-client>=0.21.1",
    "django-prometheus>=2.3.1",
    "django-business-metrics>=1.0.1",
    "django-health-check>=3.18.3",
    "channels[daphne]>=4.2.0",
    "channels-redis>=4.2.1",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.3",
    "psycopg2-binary>=2.9.10",
    "django-csp>=3.8",
    "matplotlib>=3.10.0",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cudnn-cu12==9.1.0.70",
    "torch==2.5.1",
    "yuma-simulation @ file:///${PROJECT_ROOT}/yuma_simulation/yuma_simulation-0.1.0-py3-none-any.whl"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.25.0",
    "ipdb>=0.13.13",
    "freezegun>=1.5.1",
]
lint = [
    "ruff>=0.8.3",
    "codespell[toml]>=2.3.0",
]
type_check = [
    "django-stubs[compatible-mypy]>=5.1.1",
    "djangorestframework-stubs[compatible-mypy]>=3.15.2",
    "mypy>=1.13.0",
    "types-freezegun>=1.1.10",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
src = ["app/src"]
line-length = 120

[tool.ruff.lint]
# TODO add D
select = [
    "E", "F", "I", "UP", "S",
    "TCH005",
]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
    "S101", "S108", "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/test*/**.py" = ["D", "F403", "F405", "S106", "S311"]

[tool.codespell]
skip = '*.min.js,*.lock,*/monitoring_certs/*'
ignore-words-list = 'datas'
