[project]
name = "interactive_yuma_simulator"
requires-python = "==3.11.*"
version = "0"
dependencies = [
  "anyio>=4.7.0,<5.0.0",
  "appnope>=0.1.4,<0.2.0",
  "argon2-cffi>=23.1.0,<24.0.0",
  "argon2-cffi-bindings>=21.2.0,<22.0.0",
  "arrow>=1.3.0,<2.0.0",
  "asttokens>=3.0.0,<4.0.0",
  "async-lru>=2.0.4,<3.0.0",
  "attrs>=24.2.0,<25.0.0",
  "babel>=2.16.0,<3.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "bittensor==9.6.0",
  "bleach>=6.2.0,<7.0.0",
  "celery>=5.4.0",
  "certifi>=2024.8.30,<2025.0.0",
  "cffi>=1.17.1,<2.0.0",
  "channels[daphne]>=4.2.0",
  "channels-redis>=4.2.1",
  "charset-normalizer>=3.4.0,<4.0.0",
  "comm>=0.2.2,<0.3.0",
  "contourpy>=1.3.1,<1.4.0",
  "crispy-bootstrap5>=2025.4",
  "cycler>=0.12.1,<0.13.0",
  "debugpy>=1.8.9,<2.0.0",
  "decorator>=5.1.1,<6.0.0",
  "defusedxml>=0.7.1,<1.0.0",
  "Django>=5.1.4",
  "django-business-metrics>=1.0.1",
  "django-constance[database]>=4.1.3",
  "django-cors-headers>=4.6.0",
  "django-crispy-forms>=2.4",
  "django-csp>=3.8",
  "django-debug-toolbar>=4.4.6",
  "django-environ>=0.11.2",
  "django-extensions>=3.2.3",
  "django-health-check>=3.18.3",
  "django-probes>=1.7.0",
  "django-prometheus>=2.3.1",
  "django-structlog[celery]>=9.0.0",
  "executing>=2.1.0,<3.0.0",
  "fastjsonschema>=2.21.1,<3.0.0",
  "filelock>=3.16.1,<4.0.0",
  "fonttools>=4.55.3,<5.0.0",
  "fqdn>=1.5.1,<2.0.0",
  "fsspec>=2024.10.0,<2025.0.0",
  "gunicorn>=23.0.0",
  "h11>=0.14.0,<1.0.0",
  "httpcore>=1.0.7,<2.0.0",
  "httpx>=0.28.1,<0.29.0",
  "idna>=3.10,<4.0.0",
  "ipykernel>=6.29.5,<7.0.0",
  "ipython>=8.30.0,<9.0.0",
  "ipywidgets>=8.1.5,<9.0.0",
  "isoduration>=20.11.0,<21.0.0",
  "jedi>=0.19.2,<1.0.0",
  "jinja2>=3.1.4,<3.2.0",
  "json5>=0.10.0,<0.11.0",
  "jsonpointer>=3.0.0,<4.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "jsonschema-specifications>=2024.10.1,<2025.0.0",
  "jupyter>=1.1.1,<2.0.0",
  "jupyter-client>=8.6.3,<9.0.0",
  "jupyter-console>=6.6.3,<7.0.0",
  "jupyter-core>=5.7.2,<6.0.0",
  "jupyter-events>=0.10.0,<0.11.0",
  "jupyter-lsp>=2.2.5,<3.0.0",
  "jupyter-server>=2.14.2,<3.0.0",
  "jupyter-server-terminals>=0.5.3,<1.0.0",
  "jupyterlab>=4.3.3,<5.0.0",
  "jupyterlab-pygments>=0.3.0,<1.0.0",
  "jupyterlab-server>=2.27.3,<3.0.0",
  "jupyterlab-widgets>=3.0.13,<4.0.0",
  "kiwisolver>=1.4.7,<2.0.0",
  "markupsafe>=3.0.2,<4.0.0",
  "matplotlib>=3.10.0,<3.11.0",
  "matplotlib-inline>=0.1.7,<1.0.0",
  "mistune>=3.0.2,<4.0.0",
  "more-itertools>=10.5.0",
  "mpmath>=1.3.0,<2.0.0",
  "nbclient>=0.10.1,<1.0.0",
  "nbconvert>=7.16.4,<8.0.0",
  "nbformat>=5.10.4,<6.0.0",
  "nest-asyncio>=1.6.0,<2.0.0",
  "networkx>=3.4.2,<4.0.0",
  "notebook>=7.3.1,<8.0.0",
  "notebook-shim>=0.2.4,<1.0.0",
  "nox>=2024.10.9",
  "numpy>=2.0.1,<3.0.0",
  "nvidia-cublas-cu12==12.4.5.8",
  "nvidia-cudnn-cu12==9.1.0.70",
  "overrides>=7.7.0,<8.0.0",
  "packaging>=24.2,<25.0.0",
  "pandas>=2.2.3,<3.0.0",
  "pandocfilters>=1.5.1,<2.0.0",
  "parso>=0.8.4,<0.9.0",
  "pexpect>=4.9.0,<5.0.0",
  "pillow>=11.0.0,<12.0.0",
  "platformdirs>=4.3.6,<5.0.0",
  "prometheus-client>=0.21.1,<0.22.0",
  "prompt-toolkit>=3.0.48,<4.0.0",
  "psycopg>=3.2.3",
  "psycopg2-binary>=2.9.10",
  "ptyprocess>=0.7.0,<1.0.0",
  "pure-eval>=0.2.3,<1.0.0",
  "pycparser>=2.22,<3.0.0",
  "pydantic>=2.10.3",
  "pygments>=2.18.0,<3.0.0",
  "pyparsing>=3.2.0,<4.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "pyzmq>=26.2.0,<27.0.0",
  "redis>=5.2.1",
  "referencing>=0.35.1,<1.0.0",
  "requests>=2.32.3,<3.0.0",
  "rfc3339-validator>=0.1.4,<1.0.0",
  "rfc3986-validator>=0.1.1,<1.0.0",
  "rpds-py>=0.22.3,<1.0.0",
  "Send2Trash>=1.8.3,<2.0.0",
  "sentry-sdk>=2.19.2",
  "six>=1.17.0,<2.0.0",
  "sniffio>=1.3.1,<2.0.0",
  "soupsieve>=2.6,<3.0.0",
  "stack-data>=0.6.3,<1.0.0",
  "sympy>=1.13.1,<2.0.0",
  "terminado>=0.18.1,<1.0.0",
  "tinycss2>=1.4.0,<2.0.0",
  "torch==2.5.1",
  "tornado>=6.4.2,<7.0.0",
  "traitlets>=5.14.3,<6.0.0",
  "types-python-dateutil>=2.9.0.20241206,<3.0.0",
  "typing-extensions>=4.12.2,<5.0.0",
  "tzdata>=2024.2,<2025.0.0",
  "uri-template>=1.3.0,<2.0.0",
  "urllib3>=2.2.3,<3.0.0",
  "uvicorn[standard]>=0.34.0",
  "wcwidth>=0.2.13,<1.0.0",
  "webcolors>=24.11.1,<25.0.0",
  "webencodings>=0.5.1,<1.0.0",
  "websocket-client>=1.8.0,<2.0.0",
  "widgetsnbextension>=4.0.13,<5.0.0",
  "plotly>=6.1.2",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]


[tool.ruff]
src = ["app/src"]
line-length = 120

[tool.ruff.lint]
select = [
  "E", "F", "I", "UP", "S",
  "TC005",
]
ignore = [
  "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
  "D101", "D102", "D103", "D104",
  "E501",
  "S101", "S108", "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/test*/**.py" = ["D", "F403", "F405", "S106", "S311"]

[tool.codespell]
skip = '*.min.js,*.lock,*/monitoring_certs/*'
ignore-words-list = 'datas'

[dependency-groups]
dev = [
  "codespell>=2.4.1",
  "freezegun>=1.5.1",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-django>=4.11.1",
  "pytest-xdist>=3.6.1",
  "ruff>=0.11.7",
]
